refactor: 修改预约提醒表结构，修复查询读扩散问题，优化精准查询优惠券条件